--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,6 @@ coverage.xml
 # Django stuff:
 *.log
 
-# Sphinx documentation
-docs/doctrees
-
 # PyBuilder
 target/
 .pytest_cache
@@ -62,7 +59,9 @@ target/
 
 # Sphinx
 # ======
-# sphinx build folder
+docs/doctrees
+docs/html
+
 _build
 
 # Compiled source #
