--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Python
+#=======
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -50,9 +52,53 @@ coverage.xml
 # Django stuff:
 *.log
 
-# Sphinx documentation
-docs/_build/
-
 # PyBuilder
 target/
 .pytest_cache
+
+
+# Sphinx
+# ======
+docs/doctrees
+docs/html
+
+_build
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# Editor backup files #
+#######################
+*~
